2008-01-16  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	* daemon/soup-input-stream.c:
	* daemon/soup-output-stream.c:
	Port to libsoup-2.4.

	* configure.ac:
	* daemon/Makefile.am:
	Make building of http optional (and depend on wether
	libsoup is found or not)

2008-01-16  Frederic Crozat  <fcrozat@mandriva.com>

	* Makefile.am: Only build hal module when hal support is
	enabled (#509693).

2008-01-15  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * daemon/daemon-main.c:
        * daemon/gvfsbackendcdda.c:
        * daemon/gvfsbackendcomputer.c:
        * daemon/gvfsbackendftp.c:
        * daemon/gvfsbackendlocaltest.c:
        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
        * daemon/gvfsbackendtrash.c:
        * daemon/gvfsjobsetattribute.c:
        * hal/ghaldrive.c:
	Clean up strings and add translator comments

2008-01-15  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendcomputer.c:
        (recompute_files):
	Fix crash (#508236)
	Patch from Joe Marcus Clarke

2008-01-15  David Zeuthen  <davidz@redhat.com>

	* hal/ghaldrive.c: (_eject_unmount_mounts_cb),
	(_eject_unmount_mounts), (g_hal_drive_eject):
	* hal/ghalvolume.c: (g_hal_volume_new), (g_hal_volume_can_mount),
	(g_hal_volume_has_device_path), (g_hal_volume_mount),
	(g_hal_volume_eject):
	* hal/ghalvolume.h:
	* hal/ghalvolumemonitor.c:
	(g_hal_volume_monitor_lookup_volume_for_device_path),
	(update_volumes), (update_mounts), (update_discs):
	Fix debug spew and use try device path before mount path to tie
	volume and mount objects together. Also fix some issues with
	mounting and unmounting.
	
2008-01-15  Daniel Nylander <po@danielnylander.se>

	* configure.ac: Added sv to ALL_LINGUAS.

2008-01-14  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.2 ===
