@@ -54,6 +54,12 @@ struct _GVfsBackendHttp
 
 GType        g_vfs_backend_http_get_type    (void) G_GNUC_CONST;
 SoupURI *    g_vfs_backend_uri_for_filename (GVfsBackend *backend, const char *filename);
+
+SoupMessage * message_new_from_filename     (GVfsBackend *backend,
+                                             const char  *method,
+                                             const char  *filename);
+SoupMessage * message_new_from_uri          (const char *method,
+                                             SoupURI *uri);
 G_END_DECLS
 
 #endif /* __G_VFS_BACKEND_HTTP_H__ */
